--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -4,8 +4,10 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center_vertical"
-    android:layout_marginTop="15dp">
+    android:layout_margin="15dp">
 <TextView
+
+    android:textColor="#fff"
     android:id="@+id/forecast_time"
     android:layout_weight="2"
     android:layout_width="0dp"
@@ -13,16 +15,19 @@
 
     />
     <TextView
+        android:textColor="#fff"
         android:id="@+id/forecast_info"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
     <TextView
+        android:textColor="#fff"
         android:id="@+id/forecast_min"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
     <TextView
+        android:textColor="#fff"
         android:id="@+id/forecast_max"
         android:layout_weight="1"
         android:layout_width="0dp"
