--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <TextView
+        android:textColor="#fff"
         android:id="@+id/now_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,6 +12,7 @@
         android:layout_marginRight="15dp"
         android:layout_gravity="right"/>
     <TextView
+        android:textColor="#fff"
         android:id="@+id/now_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
